--- a/MyWeather.UWP/project.json
+++ b/MyWeather.UWP/project.json
@@ -7,7 +7,7 @@
     "Xam.Plugin.Geolocator": "4.0.1",
     "Xam.Plugins.Settings": "3.0.1",
     "Xam.Plugins.TextToSpeech": "3.0.1",
-    "Xamarin.Forms": "2.3.4.270"
+    "Xamarin.Forms": "3.0.0-ci0001"
   },
   "frameworks": {
     "uap10.0.10240": {}
